@@ -6,12 +6,12 @@ services:
 install:
 - echo "Skip install"
 script:
-- echo "Skip test"
+- echo "Skip test; aanoaa/fake-pause:$TRAVIS_TAG"
 after_success:
 - docker --version
-- docker build -t aanoaa/fake-pause .
-- docker tag registry.theopencloset.net/aanoaa/fake-pause:$GIT_TAG
-- docker push registry.theopencloset.net/aanoaa/fake-pause:$GIT_TAG
+- docker build -t aanoaa/fake-pause:$TRAVIS_TAG .
+- docker tag registry.theopencloset.net/aanoaa/fake-pause:$TRAVIS_TAG
+- docker push registry.theopencloset.net/aanoaa/fake-pause:$TRAVIS_TAG
 notifications:
   irc:
     matrix:
